# make

./: LICENCE  README.md
automake/: Makefile.am
automake/app1/: Makefile.am  app1.c
automake/app2/: Makefile.am  app2.c
automake/app3/: Makefile.am
automake/lib/: Makefile.am
cmake/: CMakeLists.txt  README.md
cmake/app1/: CMakeLists.txt  app1.c
cmake/app2/: CMakeLists.txt
cmake/app3/: CMakeLists.txt  app3.c
cmake/lib/: CMakeLists.txt  mylib.h
makefile/: Makefile  common.mk
makefile/app1/: Makefile
makefile/app2/: Makefile
makefile/app3/: Makefile
makefile/lib/: Makefile  mylib.c
